Remove module java.xml.bind from run.bat